--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "ember server",
+    "start": "ember serve --environment=production --port=${PORT}",
     "build": "ember build",
-    "test": "ember test"
+    "test": "ember test",
+    "postinstall": "bower install"
   },
   "repository": "",
   "engines": {
@@ -18,6 +19,25 @@
   },
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.2.0",
+    "broccoli-asset-rev": "^2.0.2",
+    "ember-cli": "0.2.3",
+    "ember-cli-app-version": "0.3.3",
+    "ember-cli-babel": "^5.0.0",
+    "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-dependency-checker": "0.0.8",
+    "ember-cli-form-data": "0.0.10",
+    "ember-cli-htmlbars": "0.7.4",
+    "ember-cli-ic-ajax": "0.1.1",
+    "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-qunit": "0.3.10",
+    "ember-cli-uglify": "1.0.1",
+    "ember-data": "1.0.0-beta.16.1",
+    "ember-export-application-global": "^1.0.2",
+    "glob": "^3.2.9",
+    "bower": "~1.4.1"
+  },
   "devDependencies": {
     "body-parser": "^1.2.0",
     "broccoli-asset-rev": "^2.0.2",
@@ -34,6 +54,7 @@
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16.1",
     "ember-export-application-global": "^1.0.2",
-    "glob": "^3.2.9"
+    "glob": "^3.2.9",
+    "bower": "~1.4.1"
   }
 }
